--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\Toshiba\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3576520128.properties
+deploy.ant.properties.file=C:\\Users\\John\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-1254621061.properties
+file.reference.mysql-connector-java-5.0.8-bin.jar=E:\\NetBeansProjects\\mysql-connector-java-5.0.8-bin.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Toshiba/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/domain1
+j2ee.server.domain=C:/Users/John/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Toshiba\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\John\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
